added new hobbies

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <li>Football</li>
       <li>Basketball</li>
       <li>Tennis</li>
+      <li>Coding</li>
+      <li>Fishing</li>
     </ol>
 
     <hr>
